[tool.poetry]
name = "randomstore"
version = "0.1.0"
description = "A basic distributed storage"
authors = ["nuxion <nuxion@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
ipython = "^7.22.0"
pylint = "^2.8.1"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
